Extend statistics to provide top 3 for every fish